Initial commit of full project with GitHub Actions workflow